--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
   {% if page.author_profile or layout.author_profile %}{% include author-profile.html %}{% endif %}
   {% if page.sidebar %}
     {% for s in page.sidebar %}
-      {% if s.image %}
+      <!-- {% if s.image %}
         <img src=
         {% if s.image contains "://" %}
           "{{ s.image }}"
@@ -13,7 +13,9 @@
           "{{ s.image | prepend: "/images/" | prepend: base_path }}"
         {% endif %}
         alt="{% if s.image_alt %}{{ s.image_alt }}{% endif %}">
-      {% endif %}
+      {% endif %} -->
+      <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="hengyuwen" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://cn.linkedin.com/in/hengyuwen?trk=profile-badge">Yuwen Heng</a></div>
+              
       {% if s.title %}<h3>{{ s.title }}</h3>{% endif %}
       {% if s.text %}{{ s.text | markdownify }}{% endif %}
     {% endfor %}
