--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,8 +2,8 @@
 
 {% if page.author_profile or layout.author_profile or page.sidebar %}
   <div class="sidebar sticky">
-    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
-    <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="hengyuwen" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://cn.linkedin.com/in/hengyuwen?trk=profile-badge">Yuwen Heng</a></div>
+    <!-- <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+    <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="hengyuwen" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://cn.linkedin.com/in/hengyuwen?trk=profile-badge">Yuwen Heng</a></div> -->
 
   {% if page.author_profile or layout.author_profile %}{% include author-profile.html %}{% endif %}
   {% if page.sidebar %}
